stylesheets/_component.select2.scss
/* ... */
.select2-container--open .select2-dropdown--above {
    border-bottom: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.select2-container--open .select2-dropdown--below {
    border-top: 0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.select2-search--dropdown {
    display: block;
    padding: 4px;
}

.select2-search--dropdown .select2-search__field {
    padding: 4px;
    width: 100%;
    box-sizing: border-box;
}

.select2-search--dropdown .select2-search__field::-webkit-search-cancel-button {
    -webkit-appearance: none;
}

.select2-search--dropdown.select2-search--hide {
    display: none;
}

.select2-close-mask {
    border: 0;
    margin: 0;
    padding: 0;
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    min-height: 100%;
    min-width: 100%;
    height: auto;
    width: auto;
    opacity: 0;
    z-index: 99;
    background-color: #fff;
    filter: alpha(opacity = 0);
}

.select2-hidden-accessible {
    border: 0 !important;
    clip: rect(0 0 0 0) !important;
    height: 1px !important;
    margin: -1px !important;
    overflow: hidden !important;
    padding: 0 !important;
    position: absolute !important;
    width: 1px !important;
}

.select2-container--default .select2-selection--single {
    background-color: #fafafa;
    border: 1px solid $input-border;
    border-radius: $border-radius;
}

.select2-container--default .select2-selection--single .select2-selection__rendered {
    color: #444;
    line-height: 28px;
}

.select2-container--default .select2-selection--single .select2-selection__clear {
    cursor: pointer;
    float: right;
    font-weight: bold;
}

.select2-container--default .select2-selection--single .select2-selection__placeholder {
    color: color(text, placeholder)
}

.select2-container--default .select2-selection__arrow {
    display: none;
}

// .select2-container--default .select2-selection--single .select2-selection__arrow b {
//     border-color: #888 transparent transparent;
//     border-style: solid;
//     border-width: 5px 4px 0;
//     height: 0;
//     left: 50%;
//     margin-left: -4px;
//     margin-top: -2px;
//     position: absolute;
//     top: 50%;
//     width: 0;
// }

.select2-container--default[dir="rtl"] .select2-selection--single .select2-selection__clear {
    float: left;
}

// .select2-container--default[dir="rtl"] .select2-selection--single .select2-selection__arrow {
//     left: 1px;
//     right: auto;
// }

.select2-container--default.select2-container--disabled .select2-selection--single {
    background-color: #eee;
    cursor: default;

    &:focus {
        outline: none;
    }
}

.select2-container--default.select2-container--disabled .select2-selection--single .select2-selection__clear {
    display: none;
}

.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
    border-color: transparent transparent #888;
    border-width: 0 4px 5px;
}

.select2-container--default .select2-selection--multiple {
    background-color: #fafafa;
    border: 1px solid $input-border;
    border-radius: $border-radius;
    cursor: text;
}

.select2-container--default .select2-selection--multiple .select2-selection__rendered {
    box-sizing: border-box;
    list-style: none;
    margin: 0;
    padding: 0;
    width: 100%;
}

.select2-container--default .select2-selection--multiple .select2-selection__placeholder {
    color: color(text, placeholder);
    margin-top: 5px;
    float: left;
}

.select2-container--default .select2-selection--multiple .select2-selection__clear {
    cursor: pointer;
    float: right;
    font-weight: bold;
    margin-top: 5px;
    margin-right: 10px;
}

.select2-container--default .select2-selection--multiple .select2-selection__choice {
    background-color: color(gray, lightest);
    border-color: color(gray, lightest);
    border-radius: $border-radius;
    border-width: 0;
    box-sizing: content-box;
    color: color(black);
    display: inline-block;
    float: left;
    font-weight: 500;
    line-height: 34px;
    margin: 6px 0 0 5px;
    max-width: 86%; // Magic number - largest max-width usable to prevent the label overlapping the dropdown arrow
    overflow: hidden;
    padding: 0 0 0 $padding-base;
    text-align: left;
    text-overflow: ellipsis;
    vertical-align: baseline;
    vertical-align: baseline;
    white-space: nowrap;
    word-wrap: normal;

    @include ie-lte(9) {
        -ms-text-overflow: ellipsis;
        padding-right: $padding-base;
        padding-left: 0;
    }
}


.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
    color: color(gray, lightest);
    cursor: pointer;
    display: inline-block;
    float: right;

    @include ie-lte(9) {
        color: color(black);
        float: none;
        font-size: 18px;
        line-height: 20px;
        padding: 0 $padding-base;
    }

    &:after {
        color: color(black);
        content: '\f057';
        font-family: 'FontAwesome';
        margin-right: 5px;
        visibility: visible;

        @include ie-lte(9) {
            content: normal;
        }
    }
}

.select2-container--default[dir="rtl"] .select2-selection--multiple .select2-selection__choice,
.select2-container--default[dir="rtl"] .select2-selection--multiple .select2-selection__placeholder,
.select2-container--default[dir="rtl"] .select2-selection--multiple .select2-search--inline {
    float: right;
}

.select2-container--default[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
    margin-left: 5px;
    margin-right: auto;
}

.select2-container--default[dir="rtl"] .select2-selection--multiple .select2-selection__choice__remove {
    margin-left: 2px;
    margin-right: auto;
}

.select2-container--default.select2-container--focus .select2-selection--multiple {
    @include pulsar-input-focused;
}
/* ... */

